<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WikiFish</string>
    <string name="title_activity_about">Help</string>
    <string name="action_settings">Settings</string>
    <string name="title_name">Name:</string>
    <string name="title_price">Price:</string>
    <string name="comment_new">Comment New</string>
    <string name="title_scientific_name">Scientific:</string>
    <string name="action_setting">Settings</string>
    <string name="colon">:</string>
    <string name="add_comment">Add comment</string>
    <string name="hint_comment">Put your comment here</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="button_search">Search</string>
    <string name="button_clear">Clear</string>
    <!-- User Strings // -->
    <string name="hint_email">Email</string>
    <string name="hint_password">*****</string>
    <string name="hint_name">Name</string>
    <string name="bt_register">Register</string>
    <string name="bt_login">Login</string>
    <string name="bt_cancel">Cancel</string>
    <string name="title_create">Create User</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Logout</string>
    <string name="title_image_preview">Image Preview</string>

    <!-- \\User Strings -->
    <!-- Helpe Strings// -->
    <string name="title_help_feeding_habits">Feeding Habits</string>
    <string name="title_help_reproduction">Reproduction</string>
    <string name="title_help_aquarium_lighting">Aquarium lighting</string>
    <string name="title_help_temperament">Temperament</string>
    <string name="title_help_aquarium_setup">Aquarium Set-Up</string>
    <string name="title_help_swimming_habits">Swimming Habits</string>
    <string name="title_help_other">Other</string>

    <!-- Connection Infos -->
    <string name="cant_without_connection">Impossivel sem conexão.</string>
    <string name="connection_unavailable">Conexão indisponivel.</string>

    <string-array name="description_feeding_habits">
        <item>Dry, packaged food.</item>
        <item>Alimentos vivos como, besouro de amendoim, Live worms, Daphnia, etc.</item>
        <item>Peixe vivos.</item>
        <item>Vegetariano.</item>
    </string-array>
    <string-array name="description_reproduction">
        <item>Ovíparo.</item>
        <item>Vivíparo.</item>
        <item>Carrega os ovos na boca.</item>
    </string-array>
    <string-array name="description_aquarium_lighting">
        <item>Bem iluminado e com luz do natural ocasionalmente.</item>
        <item>Bem iluminado sem luz natural.</item>
        <item>O mais escuro possivel, o mínimo para que o peixe fique visivel.</item>
    </string-array>
    <string-array name="description_temperament">
        <item>Pacífico.</item>
        <item>Não Recomendado para iniciantes.</item>
    </string-array>
    <string-array name="description_aquarium_setup">
        <item>Densamente plantado.</item>
        <item>Apenas rochas, sem plantas.</item>
        <item>Apenas substrato no fundo do aquário.</item>
        <item>Completo, plantas, rochas, troncos, etc.</item>
    </string-array>
    <string-array name="description_swimming_habits">
        <item>Peixe que nada no fundo do Aquário.</item>
        <item>Peixe que nada em qualquer Parte do Aquário.</item>
        <item>Peixe que nada na superfície do Aquário.</item>
        <item>Peixe que nada em altura média do Aquário.</item>
    </string-array>
    <string-array name="description_other">
        <item>Relativo a acidez/Alcalinidade da água. Acima de 7.0 é alcalino abaixo é ácido.</item>
        <item>Dureza da água de acordo com a escala Alemã. Quanto menor o valor, mais mole a água será.</item>
        <item>Temperatura em grau centígrado.</item>
        <item>Valor máximo em tamanho que o peixe atinge em centímetro.</item>
        <item>Capacitade em litros que o menor aquário deve ter para possuir tal espécie.</item>
    </string-array>
    <!-- \\Helpe Strings -->

    <string name="title_activity_list_all">ListAllActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="is_empty">Is Empty</string>
    <string name="fish_name_default">Name of fish</string>
    <string name="title_activity_teste">Teste</string>

</resources>