<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.wikifish.LoginActivity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:ems="10" 
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email">
    </EditText>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="textPassword" 
        android:hint="@string/hint_password"/>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/ib_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/forms" 
            android:text="@string/bt_login"
            />

        <Button
            android:id="@+id/ib_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/forms" 
            android:text="@string/bt_register"/>
    </TableRow>

</LinearLayout>